objects/EMP_Human_Resource_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HR_Name__c</fullName>
        <label>HR Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_URL__c</fullName>
        <label>HR URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>On_Click__c</fullName>
        <label>On Click</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Target__c</fullName>
        <label>Page Target</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>EMP Human Resource Item</label>
</CustomObject>